[package]
name = "kao"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.1", features = ["full", "signer-mnemonic", "signer-ledger", "signer-trezor"] }
async-trait = "0.1"
# Helios's API is built against alloy 1.x; we need its BlockId type to call
# eth_getBalance against the verified light-client. alloy 1.x and 2.x share
# the same alloy-primitives version (1.5.7), so Address/U256/B256 cross the
# boundary unchanged — only block-id types need the v1 import.
alloy-eips = "1"
argon2 = "0.5.3"
bincode = "1.3"
chacha20poly1305 = "0.10.1"
dirs = "6"
getrandom = "0.4.2"
# Pinned to commit on tag 0.11.1. Bump deliberately rather than tracking a branch.
helios-ethereum = { git = "https://github.com/a16z/helios", rev = "204c998a927348e1c000a664f08d5b37b1b0d924" }
iced = { version = "0.14.0", features = ["tokio", "image", "qr_code"] }
keyring = "3.6.3"
rand = "0.8"
redb = "4.1.0"
secrecy = "0.10.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
