[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
usvg = "0.47"
